{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 18,
  "lineage": "bb9ff3d2-69cb-51da-557d-1447503780cf",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-60a9801a"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-60a9801a"
                ]
              }
            ],
            "id": "igw-6d5cc016",
            "internet_gateway_id": "igw-6d5cc016",
            "owner_id": "413406270708"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413406270708:vpc/vpc-60a9801a",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-5ecaf032",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-3b27ed41",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-60a9801a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-4273c73c",
            "owner_id": "413406270708",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413406270708:vpc/vpc-60a9801a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-6447d719",
            "default_route_table_id": "rtb-4273c73c",
            "default_security_group_id": "sg-fdc6a6d5",
            "dhcp_options_id": "dopt-3b27ed41",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-60a9801a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-4273c73c",
            "owner_id": "413406270708"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "control_plane",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413406270708:security-group/sg-0f244614b3e687582",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f244614b3e687582",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow all incomming traffic from members of this group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "udacity-microservices1-common",
            "name_prefix": null,
            "owner_id": "413406270708",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udacity-microservices1",
              "kubernetes.io/cluster/udacity-microservices1": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-60a9801a"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413406270708:security-group/sg-056482d371d508168",
            "description": "kube-api firewall",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056482d371d508168",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone to connect to tcp/6443",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "udacity-microservices1-api-lb",
            "name_prefix": null,
            "owner_id": "413406270708",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udacity-microservices1"
            },
            "timeouts": null,
            "vpc_id": "vpc-60a9801a"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413406270708:security-group/sg-08fa1ca3982cdfa41",
            "description": "ssh access",
            "egress": [],
            "id": "sg-08fa1ca3982cdfa41",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow incomming SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "udacity-microservices1-ssh",
            "name_prefix": null,
            "owner_id": "413406270708",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udacity-microservices1"
            },
            "timeouts": null,
            "vpc_id": "vpc-60a9801a"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all outgoing traffic",
            "from_port": 0,
            "id": "sgrule-1542241240",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f244614b3e687582",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_self_allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "allow all incomming traffic from members of this group",
            "from_port": 0,
            "id": "sgrule-887277230",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f244614b3e687582",
            "self": true,
            "source_security_group_id": "sg-0f244614b3e687582",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodeports",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413406270708:subnet/subnet-051820b309d26fd88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.146.0/24",
            "id": "subnet-051820b309d26fd88",
            "map_public_ip_on_launch": true,
            "owner_id": "413406270708",
            "tags": {
              "Cluster": "udacity-microservices1",
              "Name": "udacity-microservices1-us-east-1a",
              "kubernetes.io/cluster/udacity-microservices1": "shared"
            },
            "vpc_id": "vpc-60a9801a"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413406270708:subnet/subnet-00a7cdb726a28e0eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.147.0/24",
            "id": "subnet-00a7cdb726a28e0eb",
            "map_public_ip_on_launch": true,
            "owner_id": "413406270708",
            "tags": {
              "Cluster": "udacity-microservices1",
              "Name": "udacity-microservices1-us-east-1b",
              "kubernetes.io/cluster/udacity-microservices1": "shared"
            },
            "vpc_id": "vpc-60a9801a"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413406270708:subnet/subnet-07b2df6e081178724",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.148.0/24",
            "id": "subnet-07b2df6e081178724",
            "map_public_ip_on_launch": true,
            "owner_id": "413406270708",
            "tags": {
              "Cluster": "udacity-microservices1",
              "Name": "udacity-microservices1-us-east-1c",
              "kubernetes.io/cluster/udacity-microservices1": "shared"
            },
            "vpc_id": "vpc-60a9801a"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        }
      ]
    }
  ]
}